--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -5,6 +5,7 @@
 
 #eyeCatcher {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     height: auto;
