--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,23 +1,29 @@
 div#dev_header {
-    border-bottom: 1px solid white;
-    background-color: rgba(16, 17, 22, 0.57);
-    color: white;
+    background-color: rgba(50, 53, 68, 0.509);
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0 1vw;
 }
 
-#dev_header_h1, #dev_header_nav {
-    display:flex;
-    margin: 0 1vmax;
+#dev_header_h1, #dev_header_nav{
+    display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 #dev_header_nav ul{
+    display: flex;
     list-style-type: none;
+    padding: 0 0 0 1vw;
+    margin: 0;
 }
 
+#dev_header_nav ul>li {
+    padding: 0 1vw;
+}
 
-
+ 
 
 
 
