--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -1,14 +1,11 @@
-#dev_main {
-    height: clamp(80vh, auto, 100vh);
-}
 
 #eyeCatcher {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    height: auto;
-    padding: 2vh 2vw;
+    width: 100%;
+    padding: 4vh 2vw;
 }
 
 div#introStatement {
@@ -17,6 +14,72 @@ div#introStatement {
 }
 
 div#profile img{
-    height: clamp(100px, 30vh, 450px);
+    width: 90%;
+    max-width: 512px;
+    padding: 0 2vw;
+    height: auto;
 }
 
+span#emName {
+    box-shadow: 0 2px 0 rgba(99, 64, 170, 0.783);
+}
+
+.About {
+    min-height: 100vh;
+    background-color: black;
+    padding: 2vh 2rem 2rem 2rem;
+  }
+  
+  .About__header {
+    color: white;
+    text-align: center;
+    font-size: 2rem;
+    margin: 1rem 1rem 5vh 1rem;
+  }
+
+.Bio {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    padding: 0.8rem;
+    margin: 1rem auto;
+  }
+  
+  .row_image_container {
+    width: 100%;
+  }
+  
+  .row_image {
+    display: block;
+    width: 90%;
+    max-width: 512px;
+    margin: 0 auto;
+    padding: 1.5rem 0;
+    border-radius: 50%;
+  }
+  
+  .row_text {
+    margin: 0.8rem;
+  }
+  
+  @media all and (min-width: 1000px) {
+    .Bio {
+      flex-direction: row;
+      align-items: center;
+    }
+  
+    .reverse {
+      flex-direction: row-reverse;
+    }
+  
+    .row_image_container {
+      width: 50%;
+    }
+  
+    .row_content {
+      width: 50%;
+      font-size: 0.9rem;
+    }
+  }
