--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -3,8 +3,7 @@ div#dev_header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 0 1vw;
-    box-shadow: 0 0 50px rgb(100, 64, 170);
+    box-shadow: 0 0 50px 0 rgb(100, 64, 170);
 }
 
 #dev_header_h1, #dev_header_nav{
@@ -16,12 +15,16 @@ div#dev_header {
 #dev_header_nav ul{
     display: flex;
     list-style-type: none;
-    padding: 0 0 0 1vw;
+    padding: 0;
     margin: 0;
 }
 
-#dev_header_nav ul>li {
+#dev_header ul li {
     padding: 0 1vw;
+}
+
+#dev_header ul li a:hover {
+    cursor: pointer;
 }
 
  
