--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -9,3 +9,7 @@ div#ContactInfo {
     justify-content: space-evenly;
     align-items: center;
 }
+
+div#ContactInfo a{
+    color: rgb(255,255,255);
+}
