--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -13,3 +13,7 @@ div#ContactInfo {
 div#ContactInfo a{
     color: rgb(255,255,255);
 }
+
+div#ContactInfo a:hover h2{
+    box-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+}
